Estilos para o texto do NITF

--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -3,7 +3,7 @@
 /********** Variaveis principais **********/
 
 $bg-color: #fff;
-$main-font: 'Titillium Web', sans-serif;
+$main-font: 'Raleway', sans-serif;
 $main-fontsize: 1em;
 $main-width: 100%;
 $main-color: #0094ff;
