--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -26,7 +26,13 @@ header#main-header {
     background-color: $nav-color;
     color: $nav-link;
     border-bottom: 1px solid #f1f1f1;
-    padding: 30px 0;
+    padding: 40px 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    box-shadow: 0 8px 6px -6px #ccc;
+
 
     h4 {
       margin-bottom: 20px;
@@ -34,6 +40,7 @@ header#main-header {
 
     ul li {
       display: list-item;
+      margin-bottom: .8rem;
     }
     #portal-redes li {
       display: inline-block;
@@ -43,7 +50,7 @@ header#main-header {
   .navigation-content:before {
     content: "\25B2";
     position: absolute;
-    top: -40px;
+    top: -50px;
     left: -4px;
     color: #fff;
     font-size: 36px;
@@ -95,6 +102,7 @@ header#main-header {
     text-align: right;
     text-transform: uppercase;
     font-size: 70%;
+    line-height: 1.2rem;
 
   .link-contraste {
     display: inline-block;
@@ -148,8 +156,9 @@ header#main-header {
 
 /********** Busca **********/
 #search, #portal-searchbox {
+  background-color: transparent;
+  float: none;
   width: 100%;
-  background-color: $top-color;
   text-align: center;
   padding: 140px 0;
   margin: 0;
