Use local fonts

--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -34,6 +34,7 @@ $footer-link: #272727;
 
 /********** Estilos Básicos do IDG **********/
 
+@import '../scss/fonts';
 @import 'sprite';
 @import '../scss/grid';
 @import '../scss/basic';
