Adiciona navegação do portal em 2 níveis

--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -60,21 +60,39 @@ header#main-header {
   .navigation-content {
     @extend .ct-width;
     position: relative;
-    display: flex;
-
-    a:link,
-    a:hover,
-    a:visited {
-      color: lighten( $nav-link, 60% );
-    }
-  }
-  .navigation-cell {
-    width: 25%;
-    border-right: 1px solid #f1f1f1;
-    padding: 0 20px;
   }
   #navigation-redes {
     border-right: none;
+  }
+}
+/* navegacao */
+#main-navigation {
+  display: flex;
+  .list-navigation {
+    display: flex;
+    li {
+      font-weight: 900;
+      border-right: 1px solid #f1f1f1;
+      display: block;
+      margin-right: 25px;
+      padding-right: 20px;
+    }
+  }
+  a:link,
+  a:hover,
+  a:visited {
+    color: #333 !important;
+  }
+  .submenu {
+    display: block;
+    position: relative;
+    top: 25px;
+    li {
+      width: 100%;
+      font-weight: normal;
+      margin-right: 0;
+      font-size: 0.875rem;
+    }
   }
 }
 
