--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -84,9 +84,6 @@ header#main-header {
     color: #333 !important;
   }
   .submenu {
-    display: block;
-    position: relative;
-    top: 25px;
     li {
       width: 100%;
       font-weight: normal;
@@ -94,6 +91,11 @@ header#main-header {
       font-size: 0.875rem;
     }
   }
+}
+ul.submenu {
+  display: block;
+  position: relative;
+  top: 25px;
 }
 
 /********** Icones **********/
