Corrige funcionamento do titulo do portal

--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -163,7 +163,7 @@ ul.submenu {
   font-weight: normal;
   margin: 0 20px;
 
-  h1 {
+  h1, #portal-title {
     display: inline;
     color: $top-link;
     font-size: 28px;
