--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -23,3 +23,27 @@
 	  line-height: 1.3em;
 	}
 }
+
+/* tile de titulo */
+.tile .outstanding-header {
+    width: 100%;
+    text-align: center;
+    padding: 30px 0 10px 0;
+
+    h2 {
+        font-size: 2.25rem;
+        font-weight: 900;
+        color: #333333;
+    }
+}
+.tile .outstanding-link {
+    right: auto;
+    display: inline-block;
+    float: none;
+    border-radius: 30px;
+    border: solid 2px #222222 !important;
+    text-transform: uppercase;
+    padding: 15px 40px;
+    font-size: 1rem;
+    font-weight: bold !important;
+}
