Move style to _contrast.scss

--- a/webpack/app/azul/brasilgovtemas.scss
+++ b/webpack/app/azul/brasilgovtemas.scss
@@ -34,6 +34,7 @@ $footer-link: #272727;
 @import 'sprite';
 @import '../scss/grid';
 @import '../scss/basic';
+@import '../scss/contrast';
 @import '../scss/header';
 @import '../scss/tiles';
 @import '../scss/portlets';
