--- a/webpack/app/scss/_contrast.scss
+++ b/webpack/app/scss/_contrast.scss
@@ -1,83 +1,81 @@
 /* contraste */
 body.contraste,
-body.contraste header,
-body.contraste footer,
-body.contraste a,
-body.contraste h1,
-body.contraste h2,
-body.contraste h3,
-body.contraste h4,
-body.contraste h5,
-body.contraste h6,
-body.contraste #plone-document-byline,
-body.contraste #doormat-container dt,
-body.contraste #content .documentDescription,
-body.contraste #content #description,
-body.contraste .nitfByline,
-body.contraste p.section,
-body.contraste #portal-column-one > .nav-menu-de-relevancia .first-item-nav a,
-body.contraste #portal-column-one > .nav-menu-de-relevancia .first-item-nav a span,
-body.contraste .portletNavigationTree > .portletItem a span,
-body.contraste #portal-breadcrumbs > span > span.breadcrumbSeparator,
-body.contraste #portal-breadcrumbs a,
-body.contraste #portal-breadcrumbs span,
-body.contraste #content a:hover,
-body.contraste dl.portlet a:hover,
-body.contraste #category,
-body.contraste #category-vcge,
-body.contraste .tile-subtitle,
-body.contraste .tile-content p,
-body.contraste .tile p,
-body.contraste .tile a,
-body.contraste #content .gallery-element-metadata .title,
-body.contraste .videogallery-tile .description,
-body.contraste .item-central .link-central,
-body.contraste #content #tile_banner_rotativo .title,
-body.contraste #content #tile_banner_rotativo .descr,
-body.contraste #content #tile_banner_rotativo .credito,
-body.contraste #portal-siteactions a,
-body.contraste #portal-siteactions a:hover,
-body.contraste #logo #portal-logo,
-body.contraste #logo #portal-title,
-body.contraste .cover-collection-tile p,
-body.contraste.template-summary_view #content .tileItem .subtitle,
-body.folder_contraste.template-summary_view #content .tileItem .subtitle,
-body.contraste.template-summary_view #content .tileItem .tileHeadline a,
-body.folder_contraste.template-summary_view #content .tileItem .tileHeadline a,
-body.contraste.template-summary_view #content .tileItem .description,
-body.folder_contraste.template-summary_view #content .tileItem .description,
-body.contraste.template-summary_view #content .tileItem .keywords,
-body.folder_contraste.template-summary_view #content .tileItem .keywords,
-body.contraste.template-summary_view #content .tileItem .documentByLine,
-body.folder_contraste.template-summary_view #content .tileItem .documentByLine,
-body.contraste #content .documentByLine .summary-view-icon,
-body.contraste #content .subtitle,
-body.contraste.template-summary_view #content .tileItem .keywords,
-body.contraste.template-folder_summary_view #content .tileItem .keywords,
-body.contraste.template-facetednavigation_view #content .tileItem .keywords,
-body.contraste .videogallery-tile .subtitle,
-body.contraste .outstanding-header .outstanding-link,
-body.contraste #content .outstanding-header .outstanding-link:hover,
-body.contraste .galleria-info-description,
-body.contraste .galleria-info-title a,
-body.contraste .galleria-info-title a:hover,
-body.contraste .galleria-info-text .rights,
-body.contraste .lista-vertical .tile-header h3,
-body.contraste .lista-vertical .tile-header span,
-body.contraste .cover-collection-tile .tile-header span,
-body.contraste #content article div[property*='articleBody'] p,
-body.contraste #content div.newsImageContainer p.discreet,
-body.contraste #content article #viewlet-below-content-title .documentPublished,
-body.contraste #content article #viewlet-below-content-title .documentModified,
-body.contraste #content article #viewlet-below-content-title .contentHistory a,
-body.contraste #content .pullquote,
-body.contraste .cycle-player .cycle-overlay,
-body.contraste #galeria_de_fotos,
-body.contraste .galeria_container,
-body.contraste #content .gallery-footer a,
-body.contraste #content .gallery-footer a:hover,
-body.contraste #content .poll-tile .tile-content-wrapper > form > input[type=radio]+span,
-body.contraste #content .poll-tile .poll-tile-header > .header {
-  color: #FFF;
-  background: #000 !important;
+body.folder_contraste {
+  header,
+  footer,
+  a,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  dl.portlet a:hover,
+  p.section,
+  #category,
+  #category-vcge,
+  #content #description,
+  #content #tile_banner_rotativo .credito,
+  #content #tile_banner_rotativo .descr,
+  #content #tile_banner_rotativo .title,
+  #content .documentByLine .summary-view-icon,
+  #content .documentDescription,
+  #content .gallery-element-metadata .title,
+  #content .gallery-footer a,
+  #content .gallery-footer a:hover,
+  #content .outstanding-header .outstanding-link:hover,
+  #content .poll-tile .poll-tile-header > .header,
+  #content .poll-tile .tile-content-wrapper > form > input[type=radio]+span,
+  #content .pullquote,
+  #content .subtitle,
+  #content a:hover,
+  #content article #viewlet-below-content-title .contentHistory a,
+  #content article #viewlet-below-content-title .documentModified,
+  #content article #viewlet-below-content-title .documentPublished,
+  #content article div[property*='articleBody'] p,
+  #content div.newsImageContainer p.discreet,
+  #doormat-container dt,
+  #galeria_de_fotos,
+  #logo #portal-logo,
+  #logo #portal-title,
+  #plone-document-byline,
+  #portal-breadcrumbs > span > span.breadcrumbSeparator,
+  #portal-breadcrumbs a,
+  #portal-breadcrumbs span,
+  #portal-column-one > .nav-menu-de-relevancia .first-item-nav a span,
+  #portal-column-one > .nav-menu-de-relevancia .first-item-nav a,
+  #portal-siteactions a,
+  #portal-siteactions a:hover,
+  .cover-collection-tile .tile-header span,
+  .cover-collection-tile p,
+  .cycle-player .cycle-overlay,
+  .galeria_container,
+  .galleria-info-description,
+  .galleria-info-text .rights,
+  .galleria-info-title a,
+  .galleria-info-title a:hover,
+  .item-central .link-central,
+  .lista-vertical .tile-header h3,
+  .lista-vertical .tile-header span,
+  .nitfByline,
+  .outstanding-header .outstanding-link,
+  .portletNavigationTree > .portletItem a span,
+  .tile a,
+  .tile p,
+  .tile-content p,
+  .tile-subtitle,
+  .videogallery-tile .description,
+  .videogallery-tile .subtitle,
+  &.template-facetednavigation_view #content .tileItem .keywords,
+  &.template-folder_summary_view #content .tileItem .keywords,
+  &.template-summary_view #content .tileItem .keywords,
+  &.template-summary_view #content .tileItem .subtitle,
+  &.template-summary_view #content .tileItem .tileHeadline a,
+  &.template-summary_view #content .tileItem .description,
+  &.template-summary_view #content .tileItem .keywords,
+  &.template-summary_view #content .tileItem .subtitle,
+  &.template-summary_view #content .tileItem .documentByLine {
+    color: #FFF;
+    background: #000 !important;
+  }
 }
