--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -38,6 +38,7 @@ $footer-link: #272727;
 @import 'sprite';
 @import '../scss/grid';
 @import '../scss/basic';
+@import '../scss/content';
 @import '../scss/header';
 @import '../scss/tiles';
 @import '../scss/portlets';
