Fix contrast for the new theme (#164)
* Fix contrast for the new theme

* Estilos básicos do contraste

* Move style to _contrast.scss

* Rename module contrast.js

* CSSComb

* Refactor CSS

* Move contrast to the end of CSS

--- a/webpack/app/azul/brasilgovtemas.scss
+++ b/webpack/app/azul/brasilgovtemas.scss
@@ -39,3 +39,4 @@ $footer-link: #272727;
 @import '../scss/portlets';
 @import '../scss/footer';
 @import '../scss/responsive';
+@import '../scss/contrast';
