--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -44,3 +44,4 @@ $footer-link: #272727;
 @import '../scss/portlets';
 @import '../scss/footer';
 @import '../scss/responsive';
+@import '../scss/contrast';
