--- a/webpack/app/verde/brasilgovtemas.scss
+++ b/webpack/app/verde/brasilgovtemas.scss
@@ -39,3 +39,4 @@ $footer-link: #272727;
 @import '../scss/portlets';
 @import '../scss/footer';
 @import '../scss/responsive';
+@import '../scss/contrast';
