Posiciona conteudo do embeder no topo da pagina

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -130,6 +130,13 @@ dd.image-caption {
   padding: 20px 0;
 }
 
+
+/* embedder videos */
+.top_embedded iframe {
+    height: 90vh;
+    width: 100%;
+}
+
 /* relacionados */
 
 #relatedItemBox {
