Ajuste no responsivo da galeria

--- a/webpack/app/scss/_grid.scss
+++ b/webpack/app/scss/_grid.scss
@@ -84,7 +84,7 @@
   width: $main-width;
   margin: 0 auto;
   max-width: 100%;
-  margin-top: 40px;
+  padding-top: 40px;
 }
 #main-content {
   flex: auto;
