--- a/webpack/app/scss/_responsive.scss
+++ b/webpack/app/scss/_responsive.scss
@@ -136,6 +136,9 @@
   .brasil-carousel-tile .swiper-slide, .brasil-carousel-tile .carousel-item {
     display: block;
   }
+  .brasil-carousel-tile .carousel-item {
+    width: 100%;
+  }
   .template-centrais-de-conteudo {
     background: #fff;
   }
