Don't hide portal-logo for mobile

--- a/webpack/app/scss/_responsive.scss
+++ b/webpack/app/scss/_responsive.scss
@@ -175,6 +175,9 @@
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
+  #portal-logo {
+      display: inline-block;
+  }
   div.cell {
     float: none;
 
