Nova organização e estilos para o topo do Portal

--- a/webpack/app/scss/_basic.scss
+++ b/webpack/app/scss/_basic.scss
@@ -57,7 +57,7 @@ h4,
 h5,
 h6 {
   font-family: $main-font;
-  font-weight: bold;
+  font-weight: 900;
   color: $header-color;
   letter-spacing: normal;
   line-height: normal;
