--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -6,13 +6,13 @@ $bg-color: #fff;
 $main-font: 'Raleway', sans-serif;
 $main-fontsize: 1em;
 $main-width: 100%;
-$main-color: #0094ff;
+$main-color: #2969bd;
 $coluna-1: 300px;
 $coluna-2: 300px;
 $grid-gutter: 0.625rem;
 $content-width: 1140px;
 
-$top-color: #0094ff;
+$top-color: #2969bd;
 $top-text: #fff;
 $top-link: #fff;
 
