Importação inicial de estilos para tiles e colunas

--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -9,7 +9,7 @@ $main-width: 100%;
 $main-color: #2969bd;
 $coluna-1: 300px;
 $coluna-2: 300px;
-$grid-gutter: 0.625rem;
+$grid-gutter: 15px;
 $content-width: 1140px;
 
 $top-color: #2969bd;
